--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your Oreo, and this is my first web-app.
+            Sunny ab pdhne baithna thoda der me
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
