--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="E:\My Files\12666541_554059874753620_502210937_n.jpg" class="img-medium"/>
+            <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
