[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Sunny ab pdhne baithna thoda der me
+            Ye mera pehla web-app hai-Oreo
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
