--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Ye mera pehla web app hai-Oreo. Av bahut simple sa hai. Av sikh hi rahe hai soo. But humko bahut maja aa raha ye bnane me
+            Ye mera pehla web app hai. Av bahut simple sa hai. Av sikh hi rahe hai soo. But humko bahut maja aa raha ye bnane me
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
