[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,3 +1,32 @@
 <html>
-
+    <head>
+        <title>
+            Article One | Ravi Kant Jha
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            This is the first article
+        </h3>
+        <div>
+            Oct 13, 2016
+        </div>
+        <div>
+            <p>
+                This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page
+            </p>
+            
+            <p>
+                This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page
+            </p>
+            
+            <p>
+                This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page
+            </p>
+        </div>
+    </body>
 </html>
