[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -18,7 +18,7 @@
         </div>
         <div>
             <p>
-                This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.Its so intresting to do all this. Dhire Dhire or design kar k page bna lenge :-)
+                This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.Its so intresting to do all this. Dhire Dhire or design kar k or sundar page bna lenge :-)
             </p>
             
             <p>
