[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -1,3 +1,24 @@
 <html>
-
+    <head>
+        <title>
+            Article Second | Ravi Kant Jha
+        </title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+    <body>
+        <div>
+            <a href="/">Home</a>
+        </div>
+        <hr/>
+        <h3>
+            This is the second article
+        </h3>
+        <div>
+            Oct 13, 2016
+        </div>
+        <div>
+            <p>
+                This is the Second article.
+        </div>
+    </body>
 </html>
