[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,17 @@
             Article One | Ravi Kant Jha
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: sky blue;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div>
         <div>
             <a href="/">Home</a>
         </div>
@@ -13,7 +22,7 @@
         <h3>
             This is the first article
         </h3>
-        <div>
+        <div="container">
             Oct 13, 2016
         </div>
         <div>
@@ -28,6 +37,7 @@
             <p>
                 This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page.This is the first article and in the next step I will allign this web-page to my home page
             </p>
+        </div>
         </div>
     </body>
 </html>
