[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -14,7 +14,7 @@
         </style>
     </head>
     <body>
-        <div>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -22,7 +22,7 @@
         <h3>
             This is the first article
         </h3>
-        <div="container">
+        <div>
             Oct 13, 2016
         </div>
         <div>
