--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,7 +8,7 @@
             .container {
                 max-width: 800px;
                 margin: 0 auto;
-                color: sky blue;
+                color: sky-blue;
                 font-family: sans-serif;
             }
         </style>
