[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,10 @@
             Article Second | Ravi Kant Jha
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="conatiner">
         <div>
             <a href="/">Home</a>
         </div>
@@ -19,6 +21,7 @@
         <div>
             <p>
                 This is the Second article.
+        </div>
         </div>
     </body>
 </html>
