--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,24 +4,25 @@
             Article Second | Ravi Kant Jha
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/ui/style.css" rel="stylesheet" />
+    <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="conatiner">
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
         <hr/>
         <h3>
-            This is the second article
+            This is the Second article
         </h3>
         <div>
             Oct 13, 2016
         </div>
         <div>
             <p>
-                This is the Second article.
+                This is the second article.
         </div>
         </div>
     </body>
 </html>
+
