--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,7 +4,17 @@
             Article Second | Ravi Kant Jha
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="/ui/style.css" rel="stylesheet" />
+    <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: #4a4a4a;
+                font-family: sans-serif;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+
+        </style>
     </head>
     <body>
         <div class= "container">
