--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="/ui/madi.png" class="img-medium"/>
+            <img id="madi" src="https://scontent.fdel1-2.fna.fbcdn.net/v/t1.0-9/13886253_635588419934098_6812258400060103765_n.jpg?" class="img-medium"/>
         </div>
         <br>
         <div class="center text-big bold">
