[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,13 +7,20 @@
         <div class="center">
             <img id="madi" src="http://s.ndtvimg.com/images/content/2016/jul/806/ms-dhoni-champions-trophy-0707.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold">
-          Introduction to Modern application Development
+        <h3>Personal</h3>
+        <div class="center text-big bold">1
+            Hi, I am Ravi Kant Jha
         </div>
-        <script>
-            alert('Hi,I\'m JavaScript!');
-        </script>
+        <hr/>
+        <h3>Professional</h3>
+        <div class="center text-big bold">
+            I study at University of Delhi
+        </div>
+        <div class="footer">
+            
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
