[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <hr/>
         <br>
         <h3>Personal</h3>
-        <div class="center text bold">
+        <div class="center text-big bold">
             Hi, I am Ravi Kant Jha
         </div>
         <hr/>
