--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img id="madi" src="http://s.ndtvimg.com/images/content/2016/jul/806/ms-dhoni-champions-trophy-0707.jpg" class="img-medium"/>
+            <img id="madi" src="https://scontent.fdel1-2.fna.fbcdn.net/v/t1.0-9/1959297_428984763927799_5887626145761341304_n.jpg" class="img-medium"/>
         </div>
         <hr/>
         <br>
