--- a/ui/index.html
+++ b/ui/index.html
@@ -18,8 +18,9 @@
         <div class="center text-big bold">
             I study at University of Delhi
         </div>
+        <hr/>
         <div class="footer">
-            
+            This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span>times
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
