[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
         </div>
         <hr/>
         <h3>Professional</h3>
-        <div class="center text-big bold">
+        <div class="center text  bold">
             I study at University of Delhi
         </div>
         <hr/>
