--- a/ui/index.html
+++ b/ui/index.html
@@ -23,11 +23,7 @@
             This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span>times
         <br/>
         <input type="text" id="name" placeholder="name"></input>
-        <ul>
-            <li>name1</li>
-            <li>name2</li>
-            <li>name3</li>
-        </ul>
+        <ul id = "namelist"></ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
