[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,32 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img id="madi" src="http://s.ndtvimg.com/images/content/2016/jul/806/ms-dhoni-champions-trophy-0707.jpg" class="img-medium"/>
-        </div>
-        <hr/>
-        <br>
-        <h3>Personal</h3>
-        <div class="center text bold">
-            Hi, I am Ravi Kant Jha
-        </div>
-        <hr/>
-        <h3>Professional</h3>
-        <div class="center text bold">
-            I study at University of Delhi
-        </div>
-        <hr/>
-        <div class="footer">
-            This button <button id="counter">Click Me!</button> has been clicked <span id="count">0</span>times
-        <br/>
-        <input type="text" id="name" placeholder="name"></input>
-        <input type="submit" value="Submit" id="submit_btn"></input>
-        <ul id = "namelist"></ul>
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+	<head>
+		<link type="text/css" rel="stylesheet" href="style.css"/>
+		<title>Even Fancier Fonts</title>
+	</head>
+	<body>
+		<p>Much of this is regular text, but some of it is <span>fancy</span>!
+		We can use our <span>newly fancified font</span> to add some
+		<span>flair</span> to our website. It'd be a <span>royal pain</span> 
+		to make each of these span tags <span>fancy</span> individually,
+		but it's a cinch with <span>CSS</span>!</p>
+	</body>
 </html>
