[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<link type="text/css" rel="stylesheet" href="Style.css"/>
-		<title>Even Fancier Fonts</title>
+		<title>Webapp | Ravi Kant Jha</title>
 	</head>
         <style>
             body{
