[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,11 @@
             }
         </style>
 	<body>
+	<div>
+	    <p>My Profile</p>
+	</div>    
             
             
-        </body>
+    </body>
 		
 </html>
