[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,9 @@
             }
         </style>
 	<body>
-	    <p>This is a paragraph</p>  
+	    <div>
+	        
+	    </div>
  </body>
 		
 </html>
