--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
 	</head>
         <style>
             body{
-                background-color:#87cefa;
+                background-color:#90EE90;
             }
         </style>
 	<body>
